crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_attr_name_nested_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..110
  HTML_BLOCK@0..58
    HTML_BLOCK_TAG@0..14
      TEXT@0..13 "<div a&amp;b>"
      NEWLINE@13..14 "\n"
    HTML_BLOCK_CONTENT@14..58
      TEXT@14..43 "<div id=\"inner\">**raw ..."
      NEWLINE@43..44 "\n"
      TEXT@44..50 "<div/>"
      NEWLINE@50..51 "\n"
      TEXT@51..57 "</div>"
      NEWLINE@57..58 "\n"
  BLANK_LINE@58..59
    BLANK_LINE@58..59 "\n"
  HTML_BLOCK@59..110
    HTML_BLOCK_TAG@59..76
      TEXT@59..75 "<div id=\"outer\">"
      NEWLINE@75..76 "\n"
    HTML_BLOCK_CONTENT@76..110
      TEXT@76..102 "<div a&amp;b>**raw**< ..."
      NEWLINE@102..103 "\n"
      TEXT@103..109 "</div>"
      NEWLINE@109..110 "\n"
