crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_html_block_div_attr_name_quoted_gt_list_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..66
  LIST@0..66
    LIST_ITEM@0..66
      LIST_MARKER@0..1 "-"
      WHITESPACE@1..2 " "
      PLAIN@2..66
        INLINE_HTML@2..41
          INLINE_HTML_CONTENT@2..41 "<div _bad=\"x\" id=\"hid ..."
        STRONG@41..53
          STRONG_MARKER@41..43 "**"
          TEXT@43..51 "Outside."
          STRONG_MARKER@51..53 "**"
        NEWLINE@53..54 "\n"
        LINE_PREFIX@54..56 "  "
        TEXT@56..65 "next line"
        NEWLINE@65..66 "\n"
